💝🚄 Checkpoint ./views/partials/vieworder.ejs:10221761/29 ./routes/views.js:10221761/1018 ./routes/api.js:10221761/524 ./README.md:10221761/406

--- a/views/partials/vieworder.ejs
+++ b/views/partials/vieworder.ejs
@@ -14,7 +14,7 @@ employees -->
 <div>
 <h1>Order</h1>
   <h3>
-    <b>Customer: </b><%=customers[purchase[purchaseid-1].customerid-1].firstname%> <%=customers[purchase[purchaseid-1].customerid-1].lastname%>
+    <b>Customer: </b><%=customers.customerid   .firstname%> <%=customers[purchase[purchaseid-1].customerid-1].lastname%>
   </h3>
   <h3>
     <b>Total Cost: </b><%=purchase[purchaseid-1].totalcost%>
