🛍🍛 Checkpoint ./routes/api.js:10221761/30 ./views/partials/vieworder.ejs:10221761/873

--- a/views/partials/vieworder.ejs
+++ b/views/partials/vieworder.ejs
@@ -34,13 +34,12 @@
         <%var existingclaim = "false" %>
         <% claims.forEach(claim=>{ %>
         <% if (claim.productpurchaseid===resp.productpurchaseid){%>
-          <button><a  href='/edit/<%=claimid%>/orders'>VIEW Claim</a></button>
+          <button><a  href='/edit/<%=claim.claimid%>/orders'>VIEW Claim</a></button>
           <% }%>
-         <%})%>
-           <% if (existingclaim != "false"){%>
-          <%}else{%>
+        <%}else{%>
         <button onclick="claimModal('<%=resp.productpurchaseid%>')">Create Claim </button> 
         <% }%>
+         <%})%>          
       </td>
       <td><%=resp.name%></td>
       <td><%=resp.productid%></td>
