--- a/views/partials/vieworder.ejs
+++ b/views/partials/vieworder.ejs
@@ -1,8 +1,8 @@
 <% if (locals.response){%>
 <%- include("header") %>
 
-  <% var datePurchase = new Date(response.date) %>
-  <% var datePurchase = (datePurchase.getMonth()+1) + "/" + datePurchase.getDate() + "/" +  datePurchase.getFullYear() %>
+  <% var datePurchase = new Date(response[0].date) %>
+  <% datePurchase = (datePurchase.getMonth()+1) + "/" + datePurchase.getDate() + "/" +  datePurchase.getFullYear() %>
 <div>
 <h1>Order</h1>
   <h3>
@@ -34,12 +34,14 @@
         <%var existingclaim = "false" %>
         <% claims.forEach(claim=>{ %>
         <% if (claim.productpurchaseid===resp.productpurchaseid){%>
+          <% existingclaim = "true" %>
           <button><a  href='/edit/<%=claim.claimid%>/orders'>VIEW Claim</a></button>
           <% }%>
-        <%}else{%>
+         <%})%>
+           <% if (existingclaim != "false"){%>
+          <%}else{%>
         <button onclick="claimModal('<%=resp.productpurchaseid%>')">Create Claim </button> 
         <% }%>
-         <%})%>          
       </td>
       <td><%=resp.name%></td>
       <td><%=resp.productid%></td>
