🍳🍡 Checkpoint ./views/orders.ejs:10221761/9 ./README.md:10221761/67 ./routes/api.js:10221761/2992

--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -6,7 +6,7 @@
 <h1>Orders</h1>
 <%- include("partials/vieworder") %>
 <p>
-  Goals for this page: create purchases(orders), create claims based on purchases ✓, view purchases ✓
+  Goals for this page: create purchases(orders)✓, create claims based on purchases ✓, view purchases ✓
 </p>
 
 <button onclick="orderModal()">Create Order</button>
