--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -3,6 +3,7 @@
 
 
 <% if (locals.customers){%>
+<% console.log(customers) %>
 <h1>Orders</h1>
 <%- include("partials/vieworder") %>
 <p>
@@ -24,12 +25,12 @@
   <% purchase.forEach(result=>{ %>
   <% var datePurchase = new Date(result.date) %>
   <% var datePurchase = (datePurchase.getMonth()+1) + "/" + datePurchase.getDate() + "/" +  datePurchase.getFullYear() %>
-
+  <% let cust = customers.find(cust => cust.customerid = result.customerid) %>
   <tbody>
     <tr>
       <td><button><a href="/purchases/<%=result.purchaseid%>">View Order</a></button></td>
       <td><%=result.purchaseid%></td>
-      <td><%=customers[result.customerid-1].firstname%> <%=customers[result.customerid-1].lastname%></td>
+      <td><%=cust.firstname%> <%=cust.lastname%></td>
       <td><%=result.totalcost%></td>
       <td><%=datePurchase%></td>
      </tr> 
