--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -96,7 +96,7 @@
   function addProducts(){ /////WHERE ADDING PURCHASES HAPPENS
     //get total number of select elements -> use that # for loop when inserting products into product purchase table
     //get product costs and total them
-    var total = 0;;
+    var total = 0;
     var productids=[];
     for (var i = 1; i<document.getElementsByTagName("select").length; i++){ //first item in this array applies to customers, not products
       productids.push(document.getElementsByTagName("select")[i].value.split(";")[0]) //productid
