👨‍👨‍👦🍽 Checkpoint ./views/orders.ejs:10221761/2 ./routes/api.js:10221761/48

--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -25,7 +25,7 @@
   <% purchase.forEach(result=>{ %>
   <% var datePurchase = new Date(result.date) %>
   <% var datePurchase = (datePurchase.getMonth()+1) + "/" + datePurchase.getDate() + "/" +  datePurchase.getFullYear() %>
-  <% let cust = customers.find(cust => cust.customerid = result.customerid) %>
+  <% let cust = customers.find(cust => cust.customerid === result.customerid) %>
   <tbody>
     <tr>
       <td><button><a href="/purchases/<%=result.purchaseid%>">View Order</a></button></td>
