🏟🦂 Checkpoint ./static/style.css:10176435/148 ./views/supportnav.ejs:10176435/1481 ./views/supportclaims.ejs:10176435/3158 ./views/employeelogin.ejs:10176435/1340 ./routes/supportviews.js:10176435/77

--- a/static/style.css
+++ b/static/style.css
@@ -84,3 +84,17 @@ li{
 #menu3-toggle:checked + #menu3 {
   max-height: 100px;
 }
+
+#home{
+ background-color: #f2f2f2;
+}
+
+#hometitle{
+  color: #006a4e;
+}
+
+#homebtn{
+  background-color: #006a4e;
+  border: #006a4e;
+  height: 50px;
+}
