--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,8 @@
 <%- include("partials/header") %>
 
 <body id= "home"  class = container>
-  <h1>Admin Home</h1>
+  <h1 id= "hometitle" class = "h1 text-center">Admin Home</h1>
 </body>
-<p>
-  DBMS Final Project
-</p>
 
 
 <%- include("partials/footer") %>
