--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,22 +13,34 @@
   <div class = "row mt-5">
 
   <div class = "col-sm-2 text-center h-100">
+    <form>
     <button id = "homebtn" class = "btn btn-success w-100 h-50" formaction="/admin" formmethod="GET" type="submit">Admin Home</button>
+    </form>
   </div>
   <div class = "col-sm-2 text-center h-100">
+    <form>
     <button id = "homebtn" class = "btn btn-success w-100 h-50" formaction="/orders" formmethod="GET" type="submit">Orders</button>
+    </form>
   </div>
   <div class = "col-sm-2 text-center h-100">
-    <button id = "homebtn" class = "btn btn-success w-100 h-50"><a href="/claims">Claims</a></button>
+    <form>
+    <button id = "homebtn" class = "btn btn-success w-100 h-50" formaction="/claims" formmethod="GET" type="submit">Claims</button>
+    </form>
+      </div>
+  <div class = "col-sm-2 text-center h-100">
+    <form>
+    <button id = "homebtn" class = "btn btn-success w-100 h-50" formaction="/employees" formmethod="GET" type="submit">Employees</button>
+    </form>
   </div>
   <div class = "col-sm-2 text-center h-100">
-    <button id = "homebtn" class = "btn btn-success w-100 h-50"><a href="/employees">Employees</a></button>
+    <form>
+    <button id = "homebtn" class = "btn btn-success w-100 h-50" formaction="/customers" formmethod="GET" type="submit">Customers</button>
+    </form>
   </div>
   <div class = "col-sm-2 text-center h-100">
-    <button id = "homebtn" class = "btn btn-success w-100 h-50"><a href="/customers">Customers</a></button>
-  </div>
-  <div class = "col-sm-2 text-center h-100">
-  <button id = "homebtn" class = "btn btn-success w-100 h-50"><a href="/products">Products</a></button>
+  <form>
+  <button id = "homebtn" class = "btn btn-success w-100 h-50" formaction="/products" formmethod="GET" type="submit">Products</button>
+  </form>
   </div>
 
   </div>
