--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -1,16 +1,17 @@
 <%- include("partials/header") %>
 <!-- need to import purchase and productPurchase tables -->
 
+<body id= "home" class = "container">
 
 <% if (locals.customers){%>
 <% console.log(customers) %>
-<h1>Orders</h1>
+<h1 id= "hometitle" class = "h1 text-center">Orders</h1>
 <%- include("partials/vieworder") %>
 <p>
   Goals for this page: create purchases(orders)✓, create claims based on purchases ✓, view purchases ✓
 </p>
 
-<button onclick="orderModal()">Create Order</button>
+<button id = "homebtn" class = "btn btn-success w-25 h-50" onclick="orderModal()">Create Order</button>
 
 <table id="table" class="table table-hover">
   <thead>
@@ -28,7 +29,7 @@
   <% let cust = customers.find(cust => cust.customerid === result.customerid) %>
   <tbody>
     <tr>
-      <td><button><a href="/purchases/<%=result.purchaseid%>">View Order</a></button></td>
+      <td><form><button id = "homebtn" class = "btn btn-success w-50 h-50" formaction="/purchases/<%=result.purchaseid%>" formmethod="GET" type="submit">View Order</button>        </form></td>
       <td><%=result.purchaseid%></td>
       <td><%=cust.firstname%> <%=cust.lastname%></td>
       <td><%=result.totalcost%></td>
