🍄🍱 Checkpoint ./views/index.ejs:10176435/5 ./views/orders.ejs:10176435/794 ./views/home.ejs:10176435/5

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,7 +18,7 @@
 
 <body id= "home" class = "container">
   
-<div id= "hometitle" class = "h1 text-center">TechMagic Support</div>
+<div id= "hometitle" class = "h1 text-center mt-5">TechMagic Support</div>
 <div class = "row mt-5">
 
   <div class = "col-sm-6 text-center h-100">
