--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/header") %>
 
 <body id= "home"  class = container>
-  <h1 id= "hometitle" class = "h1 text-center">Admin Home</h1>
+  <h1 id= "hometitle" class = "h1 text-center mt-5">Admin Home</h1>
 </body>
 
 
