🏔🍰 Checkpoint ./views/home.ejs:10176435/52 ./static/style.css:10176435/128 ./views/partials/header.ejs:10176435/266 ./views/employeelogin.ejs:10176435/5 ./views/supportnav.ejs:10176435/5 ./views/claims.ejs:10176435/5 ./views/orders.ejs:10176435/95

--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -2,7 +2,7 @@
 <body id= "home" class = "container">
 <%- include("partials/header") %>
 <% if (locals.claims) { %> 
-<h1 id= "hometitle" class = "h1 text-center">
+<h1 id= "hometitle" class = "h1 text-center mt-5">
   Claims
 </h1>
 Goals for this page: Re-open a closed claim ✓, close a claim if theres a resolution attached ✓, edit and resolve claims  ✓, filter and sort claims based on existing claims ✓ 
