--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,14 +23,14 @@
 
   <div class = "col-sm-6 text-center h-100">
     <form>
-    <button id = "homebtn" class = "btn btn-success w-50 h-50" formaction="/admin" formmethod="GET" type="submit"> Admin </button><br><br>
+    <button id = "homebtn" class = "btn btn-success w-50 h-50 responsive-width" formaction="/admin" formmethod="GET" type="submit"> Admin </button>
     </form>
   </div>
 
  
   <div class = "col-sm-6 text-center">
     <form>
-    <button id = "homebtn" class= "btn btn-success w-50 h-50" formaction="/supportviews/supportnav" formmethod="GET" type="submit"> Support </button>
+    <button id = "homebtn" class= "btn btn-success w-50 h-50 responsive-width" formaction="/supportviews/supportnav" formmethod="GET" type="submit"> Support </button>
     </form>
   </div>
 
