--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -11,7 +11,7 @@
   Goals for this page: create purchases(orders)✓, create claims based on purchases ✓, view purchases ✓
 </p>
 
-<button id = "homebtn" class = "btn btn-success w-25 h-50" onclick="orderModal()">Create Order</button>
+<button id = "homebtn" class = "btn btn-success w-50 h-50 responsive-width" onclick="orderModal()">Create Order</button>
 
 <table id="table" class="table table-hover">
   <thead>
