--- a/views/supportnav.ejs
+++ b/views/supportnav.ejs
@@ -18,7 +18,7 @@
 
 
 <body id= "home" class="container">
-  <h1 id= "hometitle" class = "h1 text-center">Support Navigation</h1>
+  <h1 id= "hometitle" class = "h1 text-center mt-5">Support Navigation</h1>
   <div class = "row mt-5">
     
 
