--- a/views/employees.ejs
+++ b/views/employees.ejs
@@ -1,5 +1,5 @@
 <!-- CLICKABLE, SORTABLE LIST OF ALL EMPLOYEES  -->
-
+<body id= "home" class = "container">
 <%- include("partials/header") %>
 
 <% if (locals.employees) { %> 
@@ -11,9 +11,9 @@
   <div class="dropdown"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
     <b>Sort by:</b>
     <% if (locals.sort) { %>
-    <button class="dropdown-toggle" type="button" data-toggle="dropdown"><%=sort.charAt(0).toUpperCase()+ sort.slice(1).toLowerCase()%><span class="caret"></span></button>
+    <button class="btn btn-success w-25 dropdown-toggle"  type="button" data-toggle="dropdown"><%=sort.charAt(0).toUpperCase()+ sort.slice(1).toLowerCase()%><span class="caret"></span>Sort By</button>
     <%}else{%>
-    <button class="dropdown-toggle" type="button" data-toggle="dropdown"><span class="caret"></span></button>
+    <button class="btn btn-success w-25 dropdown-toggle" type="button" data-toggle="dropdown"><span class="caret"></span></button>
     <%}%>
     <ul class="dropdown-menu">
       <li><a href='/employees/asc'>Ascending Last Name</a></li>
@@ -86,7 +86,7 @@
   </div>
 </div>
 
-
+</body>
 <script type=text/javascript>
  
   function employeeModal() {
